# spdlog-fix

./: CMakeLists.txt  README.md  level.h  shutdown.h  sink_callback.h  string_uaf.h
include/: timebase.h
src/: main.cpp
